--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,6 @@
-//Deyishiklik
-html,body{
-    margin:0;
-    padding:0;
-    background: lightgray;
+body{
+  padding: 0;
+  margin: 0;
 }
 .bringToCenter{
     margin: 0 auto;
@@ -60,16 +58,16 @@ html,body{
 }
 #Left{
     border-left:2px solid black;
-    
+
 }
 #Right{
     border-right:2px solid black;
-    
+
 }
 #Bottom{
     border:2px solid black;
     border-top: 0px;
-    
+
 }
 
 #Main{
@@ -79,7 +77,7 @@ html,body{
 #Main ul li{
     width: 40px;
     height: 40px;
-    float:left; 
+    float:left;
 }
 #Main ul:nth-child(odd) li:nth-child(odd){
     background: white;
@@ -100,5 +98,5 @@ h1{
     text-align: center;
     font-family: Arial;
     font-size: 40px;
-    
+
 }
