--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,6 @@
 //Deyishiklik
-html,body{
-    margin:0;
-    padding:0;
-    background: lightgray;
-}
-.bringToCenter{
-    margin: 0 auto;
-}
-.pulLeft{
-    float: left;
-}
-.clear{
-    clear: both;
-}
-.backcolor{
-    background-color: darkgray;
-}
-.cevir{
-    -webkit-transform: rotate(180deg);
-    -moz-transform: rotate(180deg);
-    -o-transform: rotate(180deg);
-    -ms-transform: rotate(180deg);
-    transform: rotate(180deg);
-}
 
+//pozulan hisse
 #Section
 {
     width: 364px;
